--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script>window.__VP_HASH_MAP__=JSON.parse("{\"index.md\":\"Yytu0Z9Y\"}");window.__VP_SITE_DATA__=JSON.parse("{\"lang\":\"en-US\",\"dir\":\"ltr\",\"title\":\"Tako\",\"description\":\"Tako - a CLI framework that works on any JavaScript runtime\",\"base\":\"/\",\"head\":[],\"router\":{\"prefetchLinks\":true},\"appearance\":true,\"themeConfig\":{\"socialLinks\":[{\"icon\":\"github\",\"link\":\"https://github.com/takojs/tako\"}]},\"locales\":{},\"scrollOffset\":134,\"cleanUrls\":false,\"additionalConfig\":{}}");</script>
+    <script>window.__VP_HASH_MAP__=JSON.parse("{\"index.md\":\"BiUNDry3\",\"readme.md\":\"BTowrf-A\"}");window.__VP_SITE_DATA__=JSON.parse("{\"lang\":\"en-US\",\"dir\":\"ltr\",\"title\":\"Tako\",\"description\":\"Tako - a CLI framework that works on any JavaScript runtime\",\"base\":\"/\",\"head\":[],\"router\":{\"prefetchLinks\":true},\"appearance\":true,\"themeConfig\":{\"socialLinks\":[{\"icon\":\"jsr\",\"link\":\"https://jsr.io/@takojs/tako\"},{\"icon\":\"npm\",\"link\":\"https://www.npmjs.com/package/@takojs/tako\"},{\"icon\":\"github\",\"link\":\"https://github.com/takojs/tako\"}],\"footer\":{\"message\":\"This project is licensed under the MIT License.\",\"copyright\":\"Copyright © 2025 Takuro Kitahara and Tako contributors\"}},\"locales\":{},\"scrollOffset\":134,\"cleanUrls\":false,\"additionalConfig\":{}}");</script>
     
   </body>
 </html>
